[package]
name = "computer"
version = "0.1.0"
authors = ["James Humphries <james@yantr.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

num_enum = "0.4.2"
lazy_static = "1.4.0"
crossbeam-channel = "0.4"