[package]
name = "day13"
version = "0.1.0"
authors = ["James Humphries <james@yantr.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
computer = { path = "../computer" }
ggez = "0.5"
num_enum = "0.4.2"
crossbeam-channel = "0.4"